<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:id="@+id/hours_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginVertical="8dp"
        android:layout_marginEnd="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/minutes_container"
        app:layout_constraintHorizontal_chainStyle="packed"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="8dp"
            android:text="@string/hours" />

        <NumberPicker
            android:id="@+id/hours"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/hour_picker_description"
            android:descendantFocusability="blocksDescendants" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/minutes_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginVertical="8dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/seconds_container"
        app:layout_constraintStart_toEndOf="@+id/hours_container"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="8dp"
            android:text="@string/minutes" />

        <NumberPicker
            android:id="@+id/minutes"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/minutes_picker_description"
            android:descendantFocusability="blocksDescendants" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/seconds_container"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_marginVertical="8dp"
        android:layout_marginStart="16dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minutes_container"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginVertical="8dp"
            android:text="@string/seconds" />

        <NumberPicker
            android:id="@+id/seconds"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/seconds_picker_description"
            android:descendantFocusability="blocksDescendants" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>