<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="0dp"
            android:paddingEnd="8dp"
            app:menu="@menu/time_control_menu"
            app:navigationContentDescription="@string/exit_icon_description"
            app:navigationIcon="@drawable/ic_close" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <TextView
            android:id="@+id/time_header"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="24dp"
            android:text="@string/time_label"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/player_one_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="12dp"
            android:contentDescription="@string/player_one_button_description"
            android:gravity="end"
            android:padding="8dp"
            android:textColor="@color/grey_50"
            android:textSize="28sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_one_label"
            tools:text="05:00" />

        <Button
            android:id="@+id/player_two_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:layout_marginEnd="32dp"
            android:contentDescription="@string/player_two_button_description"
            android:gravity="end"
            android:padding="8dp"
            android:textColor="@color/grey_50"
            android:textSize="28sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/player_two_label"
            tools:text="05:00" />

        <Button
            android:id="@+id/increment_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/increment_button_description"
            android:gravity="end"
            android:padding="8dp"
            android:textColor="@color/grey_50"
            android:textSize="28sp"
            app:layout_constraintBottom_toBottomOf="@+id/increment_label"
            app:layout_constraintEnd_toEndOf="@+id/player_two_time"
            app:layout_constraintTop_toTopOf="@+id/increment_label"
            tools:text="00:00" />

        <TextView
            android:id="@+id/player_two_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="6dp"
            android:text="@string/player_two_label"
            app:layout_constraintEnd_toEndOf="@+id/player_two_time"
            app:layout_constraintTop_toBottomOf="@id/time_header" />

        <TextView
            android:id="@+id/increment_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="32dp"
            android:layout_marginTop="48dp"
            android:text="@string/increment_label"
            android:textSize="20sp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/divider" />

        <TextView
            android:id="@+id/player_one_label"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="6dp"
            android:layout_marginTop="24dp"
            android:text="@string/player_one_label"
            app:layout_constraintStart_toStartOf="@+id/player_one_time"
            app:layout_constraintTop_toBottomOf="@id/time_header" />

        <View
            android:id="@+id/divider"
            android:layout_width="match_parent"
            android:layout_height="0.5dp"
            android:layout_marginTop="16dp"
            android:background="@color/black"
            app:layout_constraintTop_toBottomOf="@id/same_time_switch" />

        <com.google.android.material.switchmaterial.SwitchMaterial
            android:id="@+id/same_time_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            android:checked="true"
            android:text="@string/same_times_switch"
            app:layout_constraintEnd_toEndOf="@+id/player_two_time"
            app:layout_constraintTop_toBottomOf="@+id/player_two_time"
            app:switchPadding="8dp" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.coordinatorlayout.widget.CoordinatorLayout>