<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    tools:context=".fragments.clock_list.ClockListFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/clock_list_appbar_description"
            android:background="@color/white"
            app:titleTextColor="@color/black"
            app:menu="@menu/settings_app_bar_menu"
            app:navigationIconTint="@color/black"
            app:navigationContentDescription="@string/back_icon_description"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/clock_list_appbar_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/clock_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:listitem="@layout/chess_clock_item_list"
        app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior" />

    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addClock"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|end"
        android:layout_margin="16dp"
        android:contentDescription="@string/add_clock_description"
        app:backgroundTint="@color/grey_800"
        app:layout_behavior="com.google.android.material.floatingactionbutton.FloatingActionButton$Behavior"
        app:srcCompat="@drawable/ic_add"
        app:tint="@color/white" />

</androidx.coordinatorlayout.widget.CoordinatorLayout>