<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fragments.settings.SettingsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/toolbar"
            style="@style/Widget.MaterialComponents.Toolbar.Surface"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:contentDescription="@string/settings_app_bar_description"
            app:navigationContentDescription="@string/back_icon_description"
            app:navigationIcon="@drawable/ic_arrow_back"
            app:title="@string/settings_appbar_title" />

    </com.google.android.material.appbar.AppBarLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        app:layout_behavior="com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/sound_setting_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:focusable="true"
            android:paddingHorizontal="16dp"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/sound_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_settings_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/sound_settings_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/sound_settings_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sound_settings_summary"
                android:textColor="@color/help_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/sound_settings_title"
                app:layout_constraintTop_toBottomOf="@+id/sound_settings_title" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/sound_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:checked="true"
                android:minWidth="10dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:switchMinWidth="56dp"
                app:thumbTint="?switchThumbTint"
                app:trackTint="?switchTrackTint" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="?android:attr/dividerVertical" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/low_time_warning_setting_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/low_time_warning_setting_description"
            android:focusable="true"
            android:paddingHorizontal="16dp"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/low_time_warning_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/low_time_warning_settings_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/low_time_warning_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:switchMinWidth="56dp"
                app:thumbTint="?switchThumbTint"
                app:trackTint="?switchTrackTint" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/vibrate_setting_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/vibrate_setting_description"
            android:focusable="true"
            android:paddingHorizontal="16dp"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/vibrate_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/vibrate_settings_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.switchmaterial.SwitchMaterial
                android:id="@+id/vibrate_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:switchMinWidth="56dp"
                app:thumbTint="?switchThumbTint"
                app:trackTint="?switchTrackTint" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/alert_time_setting_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="2dp"
            android:layout_marginBottom="4dp"
            android:clickable="true"
            android:contentDescription="@string/alert_time_description"
            android:focusable="true"
            android:paddingHorizontal="16dp"
            android:paddingVertical="6dp">

            <TextView
                android:id="@+id/alert_time_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/alert_time_title"
                android:textColor="@color/black"
                android:textSize="16sp"
                app:layout_constraintBottom_toTopOf="@+id/alert_time_summary"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_chainStyle="spread" />

            <TextView
                android:id="@+id/alert_time_summary"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="00:00:00"
                android:textColor="@color/help_text"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="@+id/alert_time_title"
                app:layout_constraintTop_toBottomOf="@+id/alert_time_title" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginHorizontal="16dp"
            android:background="?android:attr/dividerVertical" />

        <LinearLayout
            android:id="@+id/theme_settings_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="16dp"
            android:layout_marginTop="4dp"
            android:background="?android:attr/selectableItemBackground"
            android:clickable="true"
            android:contentDescription="@string/vibrate_setting_description"
            android:focusable="true"
            android:orientation="vertical"
            android:paddingHorizontal="16dp"
            android:paddingVertical="5dp">

            <TextView
                android:id="@+id/theme_settings_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Theme"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/theme_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Click to customize the theme"
                android:textColor="@color/help_text" />

        </LinearLayout>

    </LinearLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>